@@ -70,6 +70,21 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|FastInputStream
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -449,18 +464,18 @@ argument_list|()
 decl_stmt|;
 name|JavaBinUpdateRequestCodec
 operator|.
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 name|handler
 init|=
 operator|new
 name|JavaBinUpdateRequestCodec
 operator|.
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 argument_list|()
 block|{
 specifier|public
 name|void
-name|document
+name|update
 parameter_list|(
 name|SolrInputDocument
 name|document
@@ -811,18 +826,18 @@ argument_list|()
 decl_stmt|;
 name|JavaBinUpdateRequestCodec
 operator|.
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 name|handler
 init|=
 operator|new
 name|JavaBinUpdateRequestCodec
 operator|.
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 argument_list|()
 block|{
 specifier|public
 name|void
-name|document
+name|update
 parameter_list|(
 name|SolrInputDocument
 name|document
